--- a/HanaWinStock/src/main/webapp/resources/home/css/style.css
+++ b/HanaWinStock/src/main/webapp/resources/home/css/style.css
@@ -963,7 +963,7 @@ hr {
   border-color: #8950fc !important; }
 
 .border-success {
-  border-color: #1bc5bd !important; }
+  border-color: #008485 !important; }
 
 .border-warning {
   border-color: #ffa800 !important; }
@@ -28274,9 +28274,9 @@ time {
   color: #ffa800; }
 
 .has-success .bar:before, .has-success .bar:after {
-  background: #1bc5bd; }
+  background: #008485; }
 .has-success .form-control:focus ~ label, .has-success .form-control:valid ~ label {
-  color: #1bc5bd; }
+  color: #008485; }
 
 .has-error .bar:before, .has-error .bar:after {
   background: #f64e60; }
@@ -28294,7 +28294,7 @@ time {
   .form-group.error .help-block ul li {
     list-style: none; }
 .form-group.validate input, .form-group.validate select, .form-group.validate textarea {
-  border: 1px solid #1bc5bd; }
+  border: 1px solid #008485; }
 .form-group.issue .help-block ul {
   padding: 0px;
   color: #ffa800; }
@@ -28873,7 +28873,7 @@ time {
 
 /* date-paginator */
 .dp-selected[style] {
-  background-color: #1bc5bd !important; }
+  background-color: #008485 !important; }
 
 .dp-item {
   position: relative;
@@ -30288,14 +30288,14 @@ input[type="color"] {
 .form-group label {
   font-weight: 500; }
 .form-group.has-success .help-block {
-  color: #1bc5bd; }
+  color: #008485; }
 .form-group.has-success label {
-  color: #1bc5bd; }
+  color: #008485; }
 .form-group.has-success .form-control {
-  border-color: #1bc5bd;
+  border-color: #008485;
   box-shadow: none; }
 .form-group.has-success .input-group-addon {
-  border-color: #1bc5bd;
+  border-color: #008485;
   box-shadow: none; }
 .form-group.has-warning .help-block {
   color: #ffa800; }
@@ -33103,7 +33103,7 @@ td .label {
       border: 2px solid transparent;
       border-radius: 5px; }
     .chat .item > .online {
-      border: 2px solid #1bc5bd; }
+      border: 2px solid #008485; }
     .chat .item > .offline {
       border: 2px solid #f64e60; }
     .chat .item > .message {
