--- a/HanaWinStock/src/main/webapp/resources/dash/css/style.css
+++ b/HanaWinStock/src/main/webapp/resources/dash/css/style.css
@@ -893,7 +893,7 @@ code {
   border-color: #8950fc !important; }
 
 .border-success {
-  border-color: #1bc5bd !important; }
+  border-color: #008485 !important; }
 
 .border-warning {
   border-color: #ffa800 !important; }
@@ -24789,9 +24789,9 @@ time {
   color: #ffa800; }
 
 .has-success .bar:before, .has-success .bar:after {
-  background: #1bc5bd; }
+  background: #008485; }
 .has-success .form-control:focus ~ label, .has-success .form-control:valid ~ label {
-  color: #1bc5bd; }
+  color: #008485; }
 
 .has-error .bar:before, .has-error .bar:after {
   background: #f64e60; }
@@ -24809,7 +24809,7 @@ time {
   .form-group.error .help-block ul li {
     list-style: none; }
 .form-group.validate input, .form-group.validate select, .form-group.validate textarea {
-  border: 1px solid #1bc5bd; }
+  border: 1px solid #008485; }
 .form-group.issue .help-block ul {
   padding: 0px;
   color: #ffa800; }
@@ -25328,7 +25328,7 @@ time {
 
 /* date-paginator */
 .dp-selected[style] {
-  background-color: #1bc5bd !important; }
+  background-color: #008485 !important; }
 
 .dp-item {
   position: relative;
@@ -26282,7 +26282,7 @@ time {
     display: block;
     padding: 0.75rem 1.25rem; }
     .market-price-list li a.current-ticker {
-      background-color: #1bc5bd;
+      background-color: #008485;
       color: #ffffff; }
       .market-price-list li a.current-ticker .text-success, .market-price-list li a.current-ticker .text-danger {
         color: #ffffff !important; }
@@ -26732,14 +26732,14 @@ input[type="color"] {
 .form-group label {
   font-weight: 500; }
 .form-group.has-success .help-block {
-  color: #1bc5bd; }
+  color: #008485; }
 .form-group.has-success label {
-  color: #1bc5bd; }
+  color: #008485; }
 .form-group.has-success .form-control {
-  border-color: #1bc5bd;
+  border-color: #008485;
   box-shadow: none; }
 .form-group.has-success .input-group-addon {
-  border-color: #1bc5bd;
+  border-color: #008485;
   box-shadow: none; }
 .form-group.has-warning .help-block {
   color: #ffa800; }
@@ -29612,7 +29612,7 @@ td .label {
       border: 2px solid transparent;
       border-radius: 5px; }
     .chat .item > .online {
-      border: 2px solid #1bc5bd; }
+      border: 2px solid #008485; }
     .chat .item > .offline {
       border: 2px solid #f64e60; }
     .chat .item > .message {
